--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <link rel="apple-touch-icon" type="image/png" sizes="120x120" href="apple-touch-icon-120x120.png">
 <link rel="apple-touch-icon" type="image/png" sizes="76x76" href="apple-touch-icon-76x76.png">
 <link rel="apple-touch-icon" type="image/png" sizes="60x60" href="apple-touch-icon-60x60.png">
-<!-- jquery --><script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script><!-- Bootstrap --><link href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/3.4.0/flatly/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
+<!-- jquery --><script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script><!-- Bootstrap --><link href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/3.4.0/flatly/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha256-nuL8/2cJ5NDSSwnKD8VqreErSWHtnEP9E7AySL+1ev4=" crossorigin="anonymous"></script><!-- bootstrap-toc --><link rel="stylesheet" href="bootstrap-toc.css">
 <script src="bootstrap-toc.js"></script><!-- Font Awesome icons --><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css" integrity="sha256-mmgLkCYLUQbXn0B1SRqzHar6dCnv9oZFPEC1g1cwlkk=" crossorigin="anonymous">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/v4-shims.min.css" integrity="sha256-wZjR52fzng1pJHwx4aV2AO3yyTOXrcDW7jBpJtTwVxw=" crossorigin="anonymous">
@@ -40,7 +40,7 @@
       </button>
       <span class="navbar-brand">
         <a class="navbar-link" href="index.html">pmparams</a>
-        <span class="version label label-default" data-toggle="tooltip" data-placement="bottom" title="">0.1.0.8000</span>
+        <span class="version label label-default" data-toggle="tooltip" data-placement="bottom" title="">0.1.0.9001</span>
       </span>
     </div>
 
@@ -48,6 +48,21 @@
       <ul class="nav navbar-nav">
 <li>
   <a href="reference/index.html">Reference</a>
+</li>
+<li class="dropdown">
+  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+    Articles
+     
+    <span class="caret"></span>
+  </a>
+  <ul class="dropdown-menu" role="menu">
+<li>
+      <a href="articles/getting-started.html">Getting Started with pmparams</a>
+    </li>
+    <li>
+      <a href="articles/making-bootstrap-parameter-tables.html">making-bootstrap-parameter-tables</a>
+    </li>
+  </ul>
 </li>
 <li>
   <a href="news/index.html">Changelog</a>
@@ -72,21 +87,31 @@
 
       </header><div class="row">
   <div class="contents col-md-9">
-
-<p><br></p>
 <div class="section level1">
 <div class="page-header"><h1 id="pmparams-">pmparams <a href="https:/metrumresearchgroup.github.io/pmparams"><img src="reference/figures/logo.png" align="right" width="135px"></a>
 <a class="anchor" aria-label="anchor" href="#pmparams-"></a>
 </h1></div>
+<!-- badges: start -->
+
 <div class="section level2">
 <h2 id="overview">Overview<a class="anchor" aria-label="anchor" href="#overview"></a>
 </h2>
-<p><code>pmparams</code> helps define and format parameter tables. Example code demonstrating the package as part of an analysis workflow will soon be available in our <a href="https://github.com/metrumresearchgroup/expo1-nonmem-foce/" class="external-link">MeRGE Expo 1 repository</a>.</p>
+<p><code>pmparams</code> helps define and format parameter tables. Example code demonstrating the package as part of an analysis workflow is available in our <a href="https://github.com/metrumresearchgroup/expo1-nonmem-foce/" class="external-link">MeRGE Expo 1 repository</a>.</p>
+<div class="section level3">
+<h3 id="featured-vignettes">Featured Vignettes<a class="anchor" aria-label="anchor" href="#featured-vignettes"></a>
+</h3>
+<ul>
+<li>
+<a href="https://metrumresearchgroup.github.io/pmparams/articles/getting-started.html" class="external-link">Getting Started</a> – Introduction to <code>pmparams</code> functions.</li>
+<li>
+<a href="https://metrumresearchgroup.github.io/pmparams/articles/making-bootstrap-parameter-tables.html" class="external-link">Making Bootstrap Tables</a> – Introduction to <code>pmparams</code> functions that create bootstrap parameter tables.</li>
+</ul>
+</div>
 </div>
 <div class="section level2">
 <h2 id="documentation">Documentation<a class="anchor" aria-label="anchor" href="#documentation"></a>
 </h2>
-<p>Public documentation of all functions is hosted at <a href="https://metrumresearchgroup.github.io/pmparams/" class="external-link uri">https://metrumresearchgroup.github.io/pmparams/</a></p>
+<p>Public documentation of all functions is hosted at <a href="https://metrumresearchgroup.github.io/pmparams/reference/index.html" class="external-link uri">https://metrumresearchgroup.github.io/pmparams/reference/index.html</a></p>
 </div>
 <div class="section level2">
 <h2 id="development">Development<a class="anchor" aria-label="anchor" href="#development"></a>
@@ -109,10 +134,9 @@
 <div class="section level2">
 <h2 id="getting-help">Getting help<a class="anchor" aria-label="anchor" href="#getting-help"></a>
 </h2>
-<p>If you encounter a clear bug, please file an issue with a minimal reproducible example on <a href="https://github.com/pmparams/issues" class="external-link">pmparams</a>.</p>
+<p>If you encounter a clear bug, please file an issue with a minimal reproducible example on <a href="https://github.com/metrumresearchgroup/pmparams/issues" class="external-link">pmparams</a>.</p>
 </div>
 </div>
-
   </div>
 
   <div class="col-md-3 hidden-xs hidden-sm" id="pkgdown-sidebar">
@@ -144,11 +168,17 @@
 <ul class="list-unstyled">
 <li>Katherine Kay <br><small class="roles"> Maintainer </small>  </li>
 <li>Michael McDermott <br><small class="roles"> Author </small>  </li>
+<li>Eric Anderson <br><small class="roles"> Author </small>  </li>
 <li>Grace O'Brien <br><small class="roles"> Author </small>  </li>
 </ul>
 </div>
 
-
+<div class="dev-status">
+<h2 data-toc-skip>Dev status</h2>
+<ul class="list-unstyled">
+<li><a href="https://github-drone.metrumrg.com/metrumresearchgroup/pmparams" class="external-link"><img src="https://github-drone.metrumrg.com/api/badges/metrumresearchgroup/pmparams/status.svg" alt="Build Status"></a></li>
+</ul>
+</div>
 
   </div>
 </div>
@@ -156,12 +186,12 @@
 
       <footer><div class="copyright">
   <p></p>
-<p>Developed by Katherine Kay, Michael McDermott, Grace O’Brien.</p>
+<p>Developed by Katherine Kay, Michael McDermott, Eric Anderson, Grace O’Brien.</p>
 </div>
 
 <div class="pkgdown">
   <p></p>
-<p>Site built with <a href="https://pkgdown.r-lib.org/" class="external-link">pkgdown</a> 2.0.7.</p>
+<p>Site built with <a href="https://pkgdown.r-lib.org/" class="external-link">pkgdown</a> 2.0.9.</p>
 </div>
 
       </footer>
