--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       </button>
       <span class="navbar-brand">
         <a class="navbar-link" href="index.html">pmparams</a>
-        <span class="version label label-default" data-toggle="tooltip" data-placement="bottom" title="">0.1.0.9001</span>
+        <span class="version label label-default" data-toggle="tooltip" data-placement="bottom" title="">0.2.0</span>
       </span>
     </div>
 
@@ -60,7 +60,7 @@
       <a href="articles/getting-started.html">Getting Started with pmparams</a>
     </li>
     <li>
-      <a href="articles/making-bootstrap-parameter-tables.html">Making Bbootstrap Parameter Tables</a>
+      <a href="articles/making-bootstrap-parameter-tables.html">Making Bootstrap Parameter Tables</a>
     </li>
   </ul>
 </li>
@@ -176,7 +176,7 @@
 <div class="dev-status">
 <h2 data-toc-skip>Dev status</h2>
 <ul class="list-unstyled">
-<li><a href="https://github-drone.metrumrg.com/metrumresearchgroup/pmparams" class="external-link"><img src="https://github-drone.metrumrg.com/api/badges/metrumresearchgroup/pmparams/status.svg" alt="Build Status"></a></li>
+<li><a href="https://github.com/metrumresearchgroup/pmparams/actions/workflows/main.yaml" class="external-link"><img src="https://github.com/metrumresearchgroup/pmparams/actions/workflows/main.yaml/badge.svg" alt="Build Status"></a></li>
 </ul>
 </div>
 
