--- a/authors.html
+++ b/authors.html
@@ -17,7 +17,7 @@
       </button>
       <span class="navbar-brand">
         <a class="navbar-link" href="index.html">pmparams</a>
-        <span class="version label label-default" data-toggle="tooltip" data-placement="bottom" title="">0.1.0.9001</span>
+        <span class="version label label-default" data-toggle="tooltip" data-placement="bottom" title="">0.2.0</span>
       </span>
     </div>
 
@@ -35,7 +35,7 @@
       <a href="articles/getting-started.html">Getting Started with pmparams</a>
     </li>
     <li>
-      <a href="articles/making-bootstrap-parameter-tables.html">Making Bbootstrap Parameter Tables</a>
+      <a href="articles/making-bootstrap-parameter-tables.html">Making Bootstrap Parameter Tables</a>
     </li>
   </ul></li>
 <li>
@@ -88,13 +88,13 @@
 
     <p>McDermott M, Anderson E, O'Brien G (2024).
 <em>pmparams: R package for parameter tables</em>.
-R package version 0.1.0.9001, <a href="https://github.com/metrumresearchgroup/pmparams" class="external-link">https://github.com/metrumresearchgroup/pmparams</a>. 
+R package version 0.2.0, <a href="https://github.com/metrumresearchgroup/pmparams" class="external-link">https://github.com/metrumresearchgroup/pmparams</a>. 
 </p>
     <pre>@Manual{,
   title = {pmparams: R package for parameter tables},
   author = {Michael McDermott and Eric Anderson and Grace O'Brien},
   year = {2024},
-  note = {R package version 0.1.0.9001},
+  note = {R package version 0.2.0},
   url = {https://github.com/metrumresearchgroup/pmparams},
 }</pre>
 
